SOP REST Api: get stores & get store by name is in. Swagger doc'n available at :8080/swagger/index.html endpoint.
